--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-  "name": "page-object-wdio",
+  "name": "wdio-page-object",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jstepiko/page-object-wdio.git"
+    "test": "npm run clean && wdio wdio.conf.js && npm run report",
+    "report": "allure generate --clean && allure open",
+    "clean": "rm -rf allure-results"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jstepiko/page-object-wdio/issues"
-  },
-  "homepage": "https://github.com/jstepiko/page-object-wdio#readme",
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
-    "@wdio/cli": "^6.0.15",
+    "@wdio/cli": "^6.0.16",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "webdriverio": "^6.0.15"
+    "webdriverio": "^6.0.16"
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^6.0.14",
-    "@wdio/dot-reporter": "^6.0.14",
-    "@wdio/local-runner": "^6.0.15",
-    "@wdio/mocha-framework": "^6.0.15",
-    "@wdio/selenium-standalone-service": "^6.0.15",
-    "@wdio/spec-reporter": "^6.0.14",
-    "@wdio/sync": "^6.0.15"
+    "@wdio/dot-reporter": "^6.0.16",
+    "@wdio/local-runner": "^6.0.16",
+    "@wdio/mocha-framework": "^6.0.16",
+    "@wdio/selenium-standalone-service": "^6.0.16",
+    "@wdio/spec-reporter": "^6.0.16",
+    "@wdio/sync": "^6.0.16"
   }
 }
